connection made with bit.io database, models made

--- a/src/App.css
+++ b/src/App.css
@@ -174,3 +174,19 @@ form {
   align-items: center;
   justify-content: space-around;
 }
+
+.size-containter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+input[type=radio] {
+  height: 35px;
+  width: 35px;
+}
+
+label {
+  width: 50px;
+}
